--- a/formulario.html
+++ b/formulario.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
     <script src="https://kit.fontawesome.com/bd18af8e41.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -27,7 +28,7 @@
             </div>
             <div class="form-control">
                 <label for="email">Email</label>
-                <input type="email" placeholder="jucasval@gmail.com" id="email">
+                <input type="text" placeholder="jucasval@gmail.com" id="email">
                 <i class="fas fa-check-circle"></i>
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error message</small>
@@ -49,7 +50,7 @@
             <button type="submit">Submit</button>
         </form>
     </div>
-
+    <script src="main.js"></script>
 </body>
 
 </html>
